stage0/tests/compile_fail/defer/must_defer_unpaired.dg
@must_defer
type File { id: i32 }
func main() -> i32 {
    let f = File { id: 7 }
    0
}
